...
      this.buttonLabel = "Ok"})
      : super(key: key);

  @override
  Widget build(BuildContext context) {
    return Material(
        key: const Key('customDialog'),
        type: MaterialType.transparency,
        child: Container(
          alignment: Alignment.center,
          child: Container(
            margin: const EdgeInsets.all(8.0),
            padding: const EdgeInsets.all(20.0),
...
                    ),
                const SizedBox(height: 10.0),
                Text(
                  title,
                  style: titleStyle,
                  textAlign: TextAlign.center,
                  key: const Key('dialogTitle'),
                ),
                Divider(),
                Text(
                  content,
                  textAlign: TextAlign.center,
                  key: const Key('dialogDescription'),
...
