...
                    width: double.infinity,
                    padding: const EdgeInsets.symmetric(
                        horizontal: 20.0, vertical: 8.0),
                    child: RaisedButton(
                      highlightElevation: 0,
                      elevation: 0,
                      child: Text("Create an Account"),
                      textColor: Colors.deepPurple[800],
                      color: Colors.white,
                      onPressed: () => Navigator.push(
                        context,
                        MaterialPageRoute(
                          builder: (context) => Register2(),
...
                    width: double.infinity,
                    padding: const EdgeInsets.symmetric(
                        horizontal: 20.0, vertical: 8.0),
                    child: OutlineButton(
                        highlightElevation: 0,
                        borderSide: BorderSide(color: Colors.white),
                        child: Text("Sign in"),
                        textColor: Colors.white,
                        color: Colors.white,
                        onPressed: () => Navigator.push(context,
                            MaterialPageRoute(builder: (context) => Login2()))),
                  ),
                  const SizedBox(height: 40.0),
...
