...
        padding: const EdgeInsets.all(16.0),
        child: Semantics(
          explicitChildNodes: true,
          child: Column(
            children: <Widget>[
              TextField(
                key: const ValueKey('btnRegister'),
                decoration: InputDecoration(
                  border: OutlineInputBorder(),
                  contentPadding: const EdgeInsets.all(
                    16.0,
                  ),
                  hintText: "enter your email or phone",
                ),
              ),
              const SizedBox(height: 16.0),
              TextField(
                obscureText: true,
                decoration: InputDecoration(
...
