...
            children: [
              appLogo(),
              SizedBox(height: 20),
              appTitle(),
              InkWell(
                borderRadius: BorderRadius.all(Radius.circular(16)),
                key: const ValueKey('btnGoToSample'),
                onTap: () {
                  Navigator.push(
                      context,
                      MaterialPageRoute(
                          builder: (context) =>
                              MyHomePage(title: 'Flutter Demo Title')));
...
